--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,5 +50,14 @@ services:
     env_file:
       - .env
 
+  db:
+    image: postgres
+    container_name: ${PROJECT_NAME}-db
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: admin
+
 volumes:
   streaming_data:
